<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_grey_color"
    tools:context=".ActivityTwo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_left_arrow"
       />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:padding="10dp"
        android:layout_below="@+id/toolbar"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_email_input"
        android:textColorHint="@color/email_input_text_hint_color"
        android:inputType="textEmailAddress"
        android:background="@color/basic_white_color"
        android:layout_below="@+id/emailTextView"
        android:padding="10dp"
        android:drawableEnd="@drawable/ic_edit"
        />

    <TextView
        android:id="@+id/profilePasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_password"
        android:layout_below="@+id/emailEditText"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePasswordTextView"
        android:background="@color/basic_white_color"
        android:padding="10dp"
        android:drawableEnd="@drawable/ic_question"
        />

    <TextView
        android:id="@+id/bonusInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:text="@string/profile_bonuses"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        />

</RelativeLayout>